# internal/controller/redirect_uri.go
@@ -27,7 +27,7 @@ func (o Controller) listRedirectUri(c *gin.Context) {
 // @Description	create client
 // @Tags		client
 // @Param		clientId	path	string	true	"client id"
-// @Param		bd		body	model.RedirectURI	true	"body"
+// @Param		bd			body	model.RedirectURI	true	"body"
 // @Success		200
 // @Router		/api/quick/clients/{clientId}/redirect-uri [post]
 func (o Controller) createRedirectUri(c *gin.Context) {
@@ -50,15 +50,16 @@ func (o Controller) createRedirectUri(c *gin.Context) {
 // @Description	modify client
 // @Tags		client
 // @Param		clientId	path	string	true	"client id"
-// @Param		bd		body	model.RedirectURI	true	"body"
+// @Param		bd			body	model.RedirectURI	true	"body"
 // @Success		200
-// @Router		/api/quick/redirect-uri/{uriId} [put]
+// @Router		/api/quick/clients/{clientId}/redirect-uri/{uriId} [put]
 func (o Controller) modifyRedirectUri(c *gin.Context) {
 	var in model.RedirectURI
 	if err := o.SetCtx(c).BindUriAndJson(&in).Error; err != nil {
 		resp.ErrorRequest(c, err, "init client req err")
 		return
 	}
+	in.ClientID = c.Param("clientId")
 	if err := o.svc.ModifyRedirectUri(in); err != nil {
 		resp.ErrorUnknown(c, err, "modify client err")
 		return
